--- a/index.html
+++ b/index.html
@@ -2,9 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/.png" href="./public/Yin Yang.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>version-one</title>
+    <title>Happy Birthday Site</title>
+    <meta name="description" content="Join us in celebrating your ones birthday! Event details, RSVP, gift registry, and birthday wishes all in one place.">
+    <meta name="keywords" content="birthday party, celebration, birthday wishes, event details, RSVP, gift registry, birthday photos">
+    <meta name="author" content="KoriDevifys">
+    <meta name="robots" content="index, follow">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
